- Added button "To send text as Source CODE" in chat window.
- Fixed a bug in connection to prevent PING before HELLO message.
- Fixed a bug on using Message History with CTRL+Up / CTRL+Down.
- Fixed a bug on "Raise chat window on new message".
- Fixed a bug that did not allow messages to be displayed correctly between the dark theme and the default one.
- Emoticons will no longer be displayed larger than their maximum size.
- Important private messages now open the chat window.
- Added "EnableReceivingHelpMessages" option in beebeep.rc file.
- Added global shortcut CTRL+SHIFT+1 for PANIC BUTTON and HELP REQUEST automatic message.
- Added room location in user VCard (useful also for help request).
- If you right click on a url in a chat you can copy the url to the clipboard without having to select it.
- Added shortcut with "Enter", "Return", "Space" keys to open chat if selected in list.
- Added global shortcut CTRL+ALT+C to "Select first chat available", so you can navigate with arrows and open with return.
- Added "file transfer completed" notification also per BeeBOX downloaded files.

BeeBEEP 5.8.4
- New feature: almost all the options of file beebeep.ini can be used in file beebeep.rc also
- New feature: added "Use high resolution emoticons" option
- New feature: added ECDH key exchange to encryption protocol
- New feature: added "Auto save interval" for chat messages to prevent data loss
- New feature: added "Favored emoticons" as tab in emoticon list
- New feature: added Voice Message Player interface
- New dark theme added in the interface
- User icons in chat window can be clicked also if the user is offline
- Suspend/sleep mode is now managed also in Linux systems.
- File paths will be recognized and made clickable in chat (it must be a single message).
- Added "KeepModificationDateOnFileTransferred" option in beebeep.ini (it is always enabled in BeeBOX)
- Added "AllowedFileExtensionsInFileTransfer" option in beebeep.rc